--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -69,8 +69,8 @@
       <i class="fa fa-envelope-o"></i> <a href="mailto:users@causeway.apache.org">users@causeway.apache.org</a>
     </div>
     <div class="social-links float-right">
-      <a title="Mailing List" href="docs/latest/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
-      <a title="Slack Channel" href="docs/latest/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
+      <a title="Mailing List" href="docs/2.0.0-RC1/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
+      <a title="Slack Channel" href="docs/2.0.0-RC1/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
       <a title="Bug Reports (Jira)" href="https://issues.apache.org/jira/secure/RapidBoard.jspa?rapidView=87" class="bug"><i class="fa fa-bug"></i></a>
       <a title="Stackoverflow" href="https://stackoverflow.com/questions/tagged/causeway" class="stackoverflow"><i class="fa fa-stack-overflow"></i></a>
       <a title="Twitter" href="https://twitter.com/ApacheCauseway" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -109,22 +109,22 @@
         </li>
         <li><a href="#call-to-action">Quick Start</a></li>
         <li class="menu-has-children">
-          <a href="docs/latest/about.html">Docs</a>
+          <a href="docs/2.0.0-RC1/about.html">Docs</a>
           <ul>
-            <li><a href="docs/latest/about.html">Table of Contents</a></li>
+            <li><a href="docs/2.0.0-RC1/about.html">Table of Contents</a></li>
             <li><hr/></li>
-            <li><a href="docs/latest/landing-page/guides.html">Guides</a></li>
-            <li><a href="docs/latest/landing-page/components.html">Components</a></li>
-            <li><a href="extensions/latest/about.html">Extensions</a></li>
+            <li><a href="docs/2.0.0-RC1/landing-page/guides.html">Guides</a></li>
+            <li><a href="docs/2.0.0-RC1/landing-page/components.html">Components</a></li>
+            <li><a href="extensions/2.0.0-RC1/about.html">Extensions</a></li>
           </ul>
         </li>
         <li class="menu-has-children">
           <a href="#">Download</a>
           <ul>
-            <li><a href="docs/latest/starters/about.html">Starter Apps</a></li>
-            <li><a href="docs/latest/downloads/how-to#formal-releases">Source Releases</a></li>
-            <li><a href="docs/latest/landing-page/releases.html">Binary Releases</a></li>
-            <li><a href="docs/latest/downloads/how-to#source-code">Source @ Github</a></li>
+            <li><a href="docs/2.0.0-RC1/starters/about.html">Starter Apps</a></li>
+            <li><a href="docs/2.0.0-RC1/downloads/how-to#formal-releases">Source Releases</a></li>
+            <li><a href="docs/2.0.0-RC1/landing-page/releases.html">Binary Releases</a></li>
+            <li><a href="docs/2.0.0-RC1/downloads/how-to#source-code">Source @ Github</a></li>
           </ul>
         </li>
         <li class="menu-has-children">
@@ -158,7 +158,7 @@
       <p>
         <a href="#testimonials" class="btn-projects scrollto">&nbsp;Reviews&nbsp;</a>
         <a href="#call-to-action" class="btn-get-started scrollto">Quick Start</a>
-        <a href="docs/latest/about.html" class="btn-docs">&nbsp;&nbsp;&nbsp;Docs&nbsp;&nbsp;&nbsp;</a>
+        <a href="docs/2.0.0-RC1/about.html" class="btn-docs">&nbsp;&nbsp;&nbsp;Docs&nbsp;&nbsp;&nbsp;</a>
       </p>
     </div>
   </div>
@@ -209,7 +209,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Quotes</h2>
-        <p>We gathered together some quotes from current users of the framework.  You can find out who said what <a href="docs/latest/quotes/quotes.html">here</a>.</p>
+        <p>We gathered together some quotes from current users of the framework.  You can find out who said what <a href="docs/2.0.0-RC1/quotes/quotes.html">here</a>.</p>
       </div>
       <div class="owl-carousel testimonials-carousel">
 
@@ -551,7 +551,7 @@
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
-                Learn about Apache Causeway™ by running the minimal <a href="docs/latest/starters/helloworld.html">helloworld</a> starter&nbsp;app.
+                Learn about Apache Causeway™ by running the minimal <a href="docs/2.0.0-RC1/starters/helloworld.html">helloworld</a> starter&nbsp;app.
                 You can see the app running <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
                 <br/>
                 (The app scales to zero when not in use, so please allow up to a minute for it to restart if necessary).
@@ -559,7 +559,7 @@
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
-                Develop your own Apache Causeway™ app with the structured <a href="docs/latest/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
+                Develop your own Apache Causeway™ app with the structured <a href="docs/2.0.0-RC1/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
                 You can see the app running <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
                 <br/>
                 (The app scales to zero when not in use, so please allow up to a minute for it to restart if necessary).
@@ -673,7 +673,7 @@ mvn -pl webapp spring-boot:run</pre>
           <div class="contact-email">
             <i class="ion-ios-filing-outline"></i>
             <h3>Slack</h3>
-            <p><a href="docs/latest/support/slack-channel.html">Join #apache-causeway <br/>(on the ASF slack workspace)</a></p>
+            <p><a href="docs/2.0.0-RC1/support/slack-channel.html">Join #apache-causeway <br/>(on the ASF slack workspace)</a></p>
           </div>
         </div>
 
